<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blackjack Training</string>
    <string name="refresh">Deal New Hand</string>
    <string name="stay">Stay</string>
    <string name="hit">Hit</string>
    <string name="dbl">Dbl</string>
    <string name="split">Split</string>
    <string name="you">You</string>
    <string name="dealer">Dealer</string>
    <string name="correct">Correct</string>
    <string name="newHand">New</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="returnToGame">Return to Game</string>
    <string name="score">View Scores</string>
    <string name="decks">View Rem. Decks</string>
    <string name="count">View Count</string>
    <string name="acc">View Accuracy</string>
    <string name="reset">Reset All</string>
    <string name="win">View Winning</string>
    <string name="title_activity_strategy">StrategyActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
