<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Switch
        android:id="@+id/scoreCheck"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/score" />

    <Switch
        android:id="@+id/deckCheck"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/decks" />

    <Switch
        android:id="@+id/countCheck"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/count" />

    <Switch
        android:id="@+id/accCheck"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/acc" />
    
    <Switch
        android:id="@+id/winCheck"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/win" />

</LinearLayout>